Fix header z-index

--- a/src/app/deli-nav-bar/deli-nav-bar.component.css
+++ b/src/app/deli-nav-bar/deli-nav-bar.component.css
@@ -237,7 +237,7 @@ ul {
     }
 
     .header {
-        z-index: 1;
+        z-index: 10;
         background-color: rgba(250 ,250 ,250, 1);
     }
 
